# family_tree

./: CMakeLists.txt  arrowitem.cpp  arrowitem.h  family.cpp  family.h  familymember.h  familymembereditdialog.cpp  familymembereditdialog.h  familymemberitem.cpp  familymemberitem.h  familytreescene.cpp  familytreescene.h  familytreeview.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playground.cpp  playground.h  resources.qrc
resources/: family_tree.rc
src/: arrowitem.cpp  family.h  familymember.cpp  familymembereditdialog.cpp  familymembereditdialog.h  familymembereditdialog.ui  familytitleitem.cpp  familytitleitem.h  familytreeview.h  main.cpp  mainwindow.cpp  mainwindow.h
